kube/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auctions-ingress
  namespace: prod
  labels:
    name: auctions
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: reasoned-static-ip-01
    networking.gke.io/managed-certificates: "reasoned-certificate-prod-01"
    kubernetes.io/ingress.class:
      "gce"
      # enable CORS
    #
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.org/proxy-connect-timeout: "300"
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600"
spec:
  defaultBackend:
    service:
      name: auctions-service
      port:
        number: 8080
  rules:
    - host: api.reasonedart.com
      http:
        paths:
          # - pathType: Prefix
          #   path: /api/v1/auctions/*
          #   backend:
          #     service:
          #       name: auctions-service
          #       port:
          #         number: 8081
          # - pathType: Prefix
          #   path: /api/v1/bids/*
          #   backend:
          #     service:
          #       name: auctions-service
          #       port:
          #         number: 8081
          - pathType: Prefix
            path: /api/v1/offers/*
            backend:
              service:
                name: auctions-service
                port:
                  number: 8081
          # - pathType: Prefix
          #   path: /api/v1/nfts/*
          #   backend:
          #     service:
          #       name: auctions-service
          #       port:
          #         number: 8081
          - pathType: Prefix
            path: /api/v1/blind_auctions/*
            backend:
              service:
                name: auctions-service
                port:
                  number: 8082
